feat: GET sport_id from utv klab and archinisis
